--- a/cn/index.html
+++ b/cn/index.html
@@ -214,6 +214,8 @@
     .correct {
       background: #28a745; /* 绿色 */
       color: #fff;
+      border: 2px solid #fff;
+      position: relative;
     }
     .correct.highlight {
       background: #1e7e34;
