--- a/cn/beta/index.html
+++ b/cn/beta/index.html
@@ -96,6 +96,12 @@
   <div class="ios-card-content">
     <!-- 大乱斗顶部状态条 -->
     <div id="battle-header" style="display:none;">
+      <div class="battle-banner">
+        <img src="src/images/battlemode.webp" alt="Battle Mode Banner" class="battle-banner-img">
+      </div>
+    </div>
+    <!-- 大乱斗信息区域 -->
+    <div class="battle-info-container" style="display:none;">
       <span id="battle-score">得分: 0</span>
       <span id="battle-lives">生命值: ❤️❤️❤️❤️❤️</span>
       <span id="battle-timer">时间: 20s</span>
@@ -295,7 +301,7 @@
   <!-- 个人中心容器 -->
   <div id="personal-center-container" class="ios-card">
     <div class="ios-card-content">
-      <h2>设置</h2>
+      <h2>个人中心</h2>
 
       <div class="theme-switch-row">
         <span class="theme-switch-label">暗色模式</span>
@@ -341,11 +347,11 @@
     </div>
     <div class="tabbar-item" onclick="switchTab('ai')">
       <svg class="tabbar-icon" viewBox="0 0 24 24" fill="#5856D6"><path d="M21 11.5c0-1.65-1.35-3-3-3-.95 0-1.8.45-2.35 1.15l-3.15-1.85v-3.3c1.15-.35 2-1.4 2-2.65 0-1.65-1.35-3-3-3s-3 1.35-3 3c0 1.25.85 2.3 2 2.65v3.3l-3.15 1.85C6.8 8.95 5.95 8.5 5 8.5c-1.65 0-3 1.35-3 3 0 1.25.85 2.3 2 2.65v3.3l3.15 1.85c-.35.45-.55 1-.55 1.65 0 1.65 1.35 3 3 3s3-1.35 3-3c0-.65-.2-1.2-.55-1.65l3.15-1.85 3.15 1.85c-.35.45-.55 1-.55 1.65 0 1.65 1.35 3 3 3s3-1.35 3-3c0-1.25-.85-2.3-2-2.65v-3.3c1.15-.35 2-1.4 2-2.65zM8.5 19.5c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm7-11c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 11c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"/></svg>
-      <div class="function-item-text">AI教员</div>
+      <div class="function-item-text">AI咨询</div>
     </div>
     <div class="tabbar-item" onclick="switchTab('personal')">
       <svg class="tabbar-icon" viewBox="0 0 24 24" fill="#FF3B30"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
-      <div class="tabbar-text">设置</div>
+      <div class="tabbar-text">个人中心</div>
     </div>
   </div>
 
