--- a/cn/beta/index.html
+++ b/cn/beta/index.html
@@ -5,7 +5,7 @@
   <script src="index.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>驾考练习 - iOS风格</title>
+  <title>ZALEM.APP - 驾考练习</title>
 </head>
 
 <body>
