--- a/cn/beta/ads/pages/merchant.html
+++ b/cn/beta/ads/pages/merchant.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>商户详情</title>
+  <title>ZALEM.APP - 商户详情</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* 自定义样式：优化图片尺寸和响应式布局 */
